@@ -1,0 +1,1 @@
+a:23:{i:0;a:2:{i:0;s:4:"﷐A";i:1;s:1:"A";}i:1;a:2:{i:0;s:4:"﷐B";i:1;s:1:"B";}i:2;a:2:{i:0;s:4:"﷐C";i:1;s:1:"C";}i:3;a:2:{i:0;s:4:"﷐D";i:1;s:1:"D";}i:4;a:2:{i:0;s:4:"﷐E";i:1;s:1:"E";}i:5;a:2:{i:0;s:4:"﷐F";i:1;s:1:"F";}i:6;a:2:{i:0;s:4:"﷐G";i:1;s:1:"G";}i:7;a:2:{i:0;s:4:"﷐H";i:1;s:1:"H";}i:8;a:2:{i:0;s:4:"﷐J";i:1;s:1:"J";}i:9;a:2:{i:0;s:4:"﷐K";i:1;s:1:"K";}i:10;a:2:{i:0;s:4:"﷐L";i:1;s:1:"L";}i:11;a:2:{i:0;s:4:"﷐M";i:1;s:1:"M";}i:12;a:2:{i:0;s:4:"﷐N";i:1;s:1:"N";}i:13;a:2:{i:0;s:4:"﷐O";i:1;s:1:"O";}i:14;a:2:{i:0;s:4:"﷐P";i:1;s:1:"P";}i:15;a:2:{i:0;s:4:"﷐Q";i:1;s:1:"Q";}i:16;a:2:{i:0;s:4:"﷐R";i:1;s:1:"R";}i:17;a:2:{i:0;s:4:"﷐S";i:1;s:1:"S";}i:18;a:2:{i:0;s:4:"﷐T";i:1;s:1:"T";}i:19;a:2:{i:0;s:4:"﷐W";i:1;s:1:"W";}i:20;a:2:{i:0;s:4:"﷐X";i:1;s:1:"X";}i:21;a:2:{i:0;s:4:"﷐Y";i:1;s:1:"Y";}i:22;a:2:{i:0;s:4:"﷐Z";i:1;s:1:"Z";}}
