@@ -1,0 +1,1 @@
+a:37:{i:0;a:2:{i:0;s:6:"﷐⠁";i:1;i:1;}i:1;a:2:{i:0;s:6:"﷐⠂";i:1;i:2;}i:2;a:2:{i:0;s:6:"﷐⠃";i:1;i:3;}i:3;a:2:{i:0;s:6:"﷐⠄";i:1;i:4;}i:4;a:2:{i:0;s:6:"﷐⠅";i:1;i:5;}i:5;a:2:{i:0;s:6:"﷐⠆";i:1;i:6;}i:6;a:2:{i:0;s:6:"﷐⠇";i:1;i:7;}i:7;a:2:{i:0;s:6:"﷐⠈";i:1;i:8;}i:8;a:2:{i:0;s:6:"﷐⠉";i:1;i:9;}i:9;a:2:{i:0;s:6:"﷐⠊";i:1;i:10;}i:10;a:2:{i:0;s:6:"﷐⠋";i:1;i:11;}i:11;a:2:{i:0;s:6:"﷐⠌";i:1;i:12;}i:12;a:2:{i:0;s:6:"﷐⠍";i:1;i:13;}i:13;a:2:{i:0;s:6:"﷐⠎";i:1;i:14;}i:14;a:2:{i:0;s:6:"﷐⠏";i:1;i:15;}i:15;a:2:{i:0;s:6:"﷐⠐";i:1;i:16;}i:16;a:2:{i:0;s:6:"﷐⠑";i:1;i:17;}i:17;a:2:{i:0;s:6:"﷐⠒";i:1;i:18;}i:18;a:2:{i:0;s:6:"﷐⠓";i:1;i:19;}i:19;a:2:{i:0;s:6:"﷐⠔";i:1;i:20;}i:20;a:2:{i:0;s:6:"﷐⠕";i:1;i:21;}i:21;a:2:{i:0;s:6:"﷐⠖";i:1;i:22;}i:22;a:2:{i:0;s:6:"﷐⠗";i:1;i:23;}i:23;a:2:{i:0;s:6:"﷐⠘";i:1;i:24;}i:24;a:2:{i:0;s:6:"﷐⠙";i:1;i:25;}i:25;a:2:{i:0;s:6:"﷐⠚";i:1;i:26;}i:26;a:2:{i:0;s:6:"﷐⠛";i:1;i:27;}i:27;a:2:{i:0;s:6:"﷐⠜";i:1;i:28;}i:28;a:2:{i:0;s:6:"﷐⠝";i:1;i:29;}i:29;a:2:{i:0;s:6:"﷐⠞";i:1;i:30;}i:30;a:2:{i:0;s:6:"﷐⠟";i:1;i:31;}i:31;a:2:{i:0;s:6:"﷐⠠";i:1;i:32;}i:32;a:2:{i:0;s:6:"﷐⠡";i:1;i:33;}i:33;a:2:{i:0;s:6:"﷐⠣";i:1;i:35;}i:34;a:2:{i:0;s:6:"﷐⠤";i:1;i:36;}i:35;a:2:{i:0;s:6:"﷐⠧";i:1;i:39;}i:36;a:2:{i:0;s:6:"﷐⠰";i:1;i:48;}}
